--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light navegador">
-   <div class="contenedor">
-   <a class="navbar-brand" href="#">Trading App</a>
-
-   <div class="navegador-menu">
-      <ul class="navbar-nav ml-auto">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">Trading App</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/login">Login</a>
         </li>
@@ -13,10 +15,7 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/admin">Admin</a>
         </li>
-      
       </ul>
     </div>
-
   </div>
-  </nav>
-  
+</nav>
