--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -8,11 +8,22 @@
   padding: 20px;
   height: 100vh;
   color: white;
-  transition: width 0.3s ease; /* Transición suave para el ancho */
 }
 
-.sidebar:hover {
-  width: 300px; /* Ancho expandido al pasar el ratón */
+.wallet-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.wallet-info i {
+  font-size: 24px;
+  margin-right: 10px;
+}
+
+.wallet-amount {
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .menu {
@@ -25,7 +36,6 @@
   display: flex;
   align-items: center;
   cursor: pointer;
-  transition: background-color 0.3s ease, padding 0.3s ease; /* Transiciones suaves para el fondo y el relleno */
 }
 
 .menu li i {
@@ -34,13 +44,7 @@
 
 .menu li:hover {
   background-color: #495057;
-  padding: 5px;
-  border-radius: 5px;
-}
-
-.menu li.active {
-  background-color: #007bff; /* Color para el estado activo */
-  color: white;
+  padding: 10px;
   border-radius: 5px;
 }
 
@@ -48,7 +52,6 @@
   flex-grow: 1;
   padding: 20px;
   background-color: #f8f9fa;
-  transition: margin-left 0.3s ease; /* Transición suave para el margen */
 }
 
 .notification-bar {
@@ -60,7 +63,6 @@
 .notification-bar i {
   font-size: 24px;
   cursor: pointer;
-  position: relative;
 }
 
 .notification-bar .badge {
@@ -70,17 +72,12 @@
   width: 20px;
   height: 20px;
   padding: 5px 10px;
-  position: relative;
   top: -10px;
-  right: -2px;
+  right: -10px;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 0.3s ease; /* Transición suave para la opacidad */
-}
-
-.notification-bar i.clicked + .badge {
-  opacity: 0; /* Desaparecer la insignia cuando se haga clic */
 }
 
 .content {
@@ -88,8 +85,4 @@
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.user-dashboard {
-  margin-top: -20px;
 }
