--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,15 +1,18 @@
 <div class="user-dashboard">
   <!-- Columna Izquierda: Menú de Navegación -->
   <div class="sidebar">
+    <div class="wallet-info">
+      <i class="fas fa-wallet"></i>
+      <span class="wallet-amount">{{ walletAmount | currency }}</span>
+    </div>
     <ul class="menu">
-      <li><i class="fas fa-home"></i> Inicio</li>
-     <!-- <li><i class="fas fa-chart-line"></i> Estadísticas</li>
-      <li><i class="fas fa-box"></i> Productos</li>
-      <li><i class="fas fa-dollar-sign"></i> Mis Ganancias</li>
-      <li><i class="fas fa-history"></i> Mi Actividad</li>
-      <li><i class="fas fa-trophy"></i> Trofeos</li>
-      <li><i class="fas fa-credit-card"></i> Crédito</li>-->
-      <li (click)="showMessages()"><i class="fas fa-envelope"></i> Mensajes</li>
+      <li routerLink="/inicio" routerLinkActive="active">
+        <i class="fas fa-home"></i> Inicio
+      </li>
+      <!-- Agregar otros elementos del menú si es necesario -->
+      <li routerLink="/user/messages" routerLinkActive="active">
+        <i class="fas fa-envelope"></i> Mensajes
+      </li>
     </ul>
   </div>
 
@@ -24,12 +27,10 @@
     <!-- Contenido Dinámico -->
     <div class="content">
       <ng-container *ngIf="!viewingMessages">
-        <h2>Bienvenido a tu Panel de Usuario</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum.</p>
-        <p>Cras placerat ultricies ante, eu varius est viverra nec. Curabitur non sagittis ligula. Donec venenatis vehicula nunc, ac elementum erat.</p>
+        <app-inicio></app-inicio> <!-- Aquí se muestra el contenido de la vista de inicio -->
       </ng-container>
       <ng-container *ngIf="viewingMessages">
-        <app-messages></app-messages>
+        <app-messages></app-messages> <!-- Aquí se muestra el contenido de los mensajes -->
       </ng-container>
     </div>
   </div>
