--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -1,6 +1,6 @@
-<div class="user-dashboard">
+<div class="user-dashboard1">
     <!-- Primera fila: Subtítulo, texto y botón -->
-    <div class="row mb-4">
+    <div class="row mb-4 bg-light py-4">
       <div class="col-md-6">
         <h2>Bienvenido al Panel de Usuario</h2>
         <p>Encuentra la información más relevante para tus inversiones y mantente al tanto de los últimos precios y gráficos.</p>
@@ -52,7 +52,6 @@
           <h3>Gráfico de Trading</h3>
           <div class="chart">
             <!-- Aquí iría el gráfico de trading, como un componente de gráficos o una imagen -->
-            <img src="assets/trading-chart.png" alt="Gráfico de Trading">
           </div>
         </div>
       </div>
