--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -81,7 +81,7 @@
 }
 
 .content {
-  background-color: white;
+  background-color: rgb(224, 224, 224);
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
