--- a/src/app/components/client-dashboard/client-dashboard.component.html
+++ b/src/app/components/client-dashboard/client-dashboard.component.html
@@ -23,6 +23,19 @@
         <span class="badge" *ngIf="notifications > 0">{{ notifications }}</span>
       </div>
   
+      <!-- Slider de Índices Bursátiles -->
+      <div class="stock-slider">
+        <h3>Índices Bursátiles</h3>
+        <ngx-swiper-wrapper [config]="slideConfig">
+          <ngx-swiper-slide *ngFor="let index of stockIndices">
+            <div class="stock-card">
+              <h4>{{ index.name }}</h4>
+              <p>{{ index.value | currency }}</p>
+            </div>
+          </ngx-swiper-slide>
+        </ngx-swiper-wrapper>
+      </div>
+  
       <!-- Contenido Dinámico -->
       <div class="content">
         <router-outlet></router-outlet> <!-- Aquí se mostrará el contenido basado en la ruta -->
