--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,8 @@
               <li class="padding"><a routerLink="/login">Login</a></li>
               <li class="padding"><a routerLink="/register">Register</a></li>
               <li class="padding"><a routerLink="/admin">Admin</a></li>
-              <li class="padding"><a href="/client-dashboard">User View</a></li>
+              <li class="padding"><a routerLink="/dashboard">User View</a></li>
+              <li class="padding"><a routerLink="/user-chart">Chart</a></li>
           </ul>
 
           <button type="button" class="btn btn-outline-light">Log Out</button>
