--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -4,7 +4,7 @@
   
   .sidebar {
     width: 250px;
-    background-color: #343a40;
+    background-color:#ddd;
     padding: 20px;
     height: 100vh;
     color: white;
