--- a/src/app/components/indices/indices.component.css
+++ b/src/app/components/indices/indices.component.css
@@ -1,29 +1,12 @@
-.indices-slider {
-    display: flex;
-    overflow-x: auto;
-    white-space: nowrap;
-    padding: 10px 0;
-  }
-  .indices-container{
-    display: flex;
-    align-items:center;
-    border:1px dashed salmon;
-  }
-  .indices-container p{
-    height: 22px;
-    margin-bottom: 0px;
-  }
-
-
-  .index-item {
+.index-item {
     display: flex;
     align-items: center;
     padding: 10px;
-    margin: 0 5px;
+    margin: 0 auto;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
-    flex: 0 0 auto;
+    width: 100%; /* Ajusta el ancho según el diseño del carrusel */
   }
   
   .index-item h4 {
@@ -45,5 +28,10 @@
   
   .index-item .change-icon {
     margin-left: 5px;
+  }
+  
+  /* Ajusta el estilo del carrusel si es necesario */
+  .c-carousel-item {
+    text-align: center;
   }
   
