--- a/src/app/components/indices/indices.component.html
+++ b/src/app/components/indices/indices.component.html
@@ -1,15 +1,20 @@
-<!-- indices.component.html -->
-<div class="indices-slider">
-    <div *ngFor="let index of indices" class="index-item">
-      <h4>{{ index.name }}</h4>
-      <div class="indices-container">
-        <p class="value">{{ index.value }}</p>
-        <p class="change">
-        <i class="fa" [ngClass]="index.change > 0 ? 'fa-arrow-up' : 'fa-arrow-down'"></i>
-        {{ index.change }}
-        </p>
-      </div>
-      
-    </div>
-  </div>
+<c-carousel [dark]="true" [wrap]="false">
+    <c-carousel-indicators></c-carousel-indicators>
+    <c-carousel-inner>
+      <c-carousel-item *ngFor="let index of positiveIndices; index as i;">
+        <div class="index-item">
+          <h4>{{ index.name }}</h4>
+          <div class="indices-container">
+            <p class="value">{{ index.value }}</p>
+            <p class="change">
+              <i class="fa" [ngClass]="index.change > 0 ? 'fa-arrow-up change-icon' : 'fa-arrow-down change-icon'"></i>
+              {{ index.change }}
+            </p>
+          </div>
+        </div>
+      </c-carousel-item>
+    </c-carousel-inner>
+    <c-carousel-control caption="Previous" direction="prev"></c-carousel-control>
+    <c-carousel-control caption="Next" direction="next"></c-carousel-control>
+  </c-carousel>
   
