--- a/src/app/components/indices/indices.component.css
+++ b/src/app/components/indices/indices.component.css
@@ -1,12 +1,28 @@
-.index-item {
+.indices-slider {
+    display: flex;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 10px 5px;
+  }
+  .indices-container{
+    display: flex;
+    align-items:center;
+  }
+  .indices-container p{
+    height: 22px;
+    margin-bottom: 0px;
+  }
+
+
+  .index-item {
     display: flex;
     align-items: center;
     padding: 10px;
-    margin: 0 auto;
+    margin: 0 5px;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
-    width: 100%; /* Ajusta el ancho según el diseño del carrusel */
+    flex: 0 0 auto;
   }
   
   .index-item h4 {
@@ -28,10 +44,5 @@
   
   .index-item .change-icon {
     margin-left: 5px;
-  }
-  
-  /* Ajusta el estilo del carrusel si es necesario */
-  .c-carousel-item {
-    text-align: center;
   }
   
