--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,10 +6,10 @@
         <span class="wallet-amount">{{ walletAmount | currency }}</span>
       </div>
       <ul class="menu">
-        <li routerLink="/client-dashboard/inicio" routerLinkActive="active">
+        <li routerLink="/dashboard/inicio" routerLinkActive="active">
           <i class="fas fa-home"></i> Inicio
         </li>
-        <li routerLink="/client-dashboard/messages" routerLinkActive="active">
+        <li routerLink="/dashboard/messages" routerLinkActive="active">
           <i class="fas fa-envelope"></i> Mensajes
         </li>
       </ul>
