--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -1,5 +1,8 @@
 .user-dashboard {
     display: flex;
+    max-width: 100%;
+    width:100%;
+    overflow-x: hidden;
   }
   
   .sidebar {
@@ -36,15 +39,17 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    padding: 10px;
   }
   
   .menu li i {
     margin-right: 10px;
+   
   }
   
   .menu li:hover {
     background-color: #495057;
-    padding: 10px;
+   
     border-radius: 5px;
   }
   
@@ -85,6 +90,7 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    
   }
   
 
