--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,28 +1,17 @@
-<!-- Main Content for Clients -->
-<div *ngIf="currentView === 'clients'">
-  <h2>Clients</h2>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Name</th>
-        <th>Email</th>
-        <th>Profit</th>
-        <th>Comments</th>
-        <th>Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let client of clients">
-        <td>{{ client.id }}</td>
-        <td>{{ client.name }}</td>
-        <td>{{ client.email }}</td>
-        <td><input [(ngModel)]="client.profit" class="form-control" /></td>
-        <td><input [(ngModel)]="client.comments" class="form-control" /></td>
-        <td>
-          <button (click)="save(client)" class="btn btn-primary">Save</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+<div class="user-dashboard">
+  <!-- Columna Izquierda: Menú de Navegación -->
+  <div class="sidebar">
+    <ul class="menu">
+      <li routerLink="/admin/user" routerLinkActive="active">
+        <i class="fa-regular fa-user"></i> Usuarios
+      </li>
+      <li routerLink="/user" routerLinkActive="active">
+        <i class="fa-solid fa-wallet"></i> Wallet
+      </li>
+    </ul>
+  </div>
+  
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
 </div>
