--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -6,7 +6,7 @@
   }
   
   .sidebar {
-    width: 250px;
+    width: 10%;
     background-color:#262626;
     padding: 20px;
     height: 100vh;
@@ -43,7 +43,8 @@
   }
   
   .active {
-    color: red; /* Solo para probar si se activa el estilo */
+    background-color: #007bff; 
+    color:#ffffff;
   }
   
 
@@ -91,11 +92,11 @@
   }
   
   .content {
-    background-color: rgb(224, 224, 224);
+    background-color: transparent;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
+    width: 90%;  
   }
   
 
