--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -9,10 +9,10 @@
         <i class="fab fa-ethereum"></i> Ethereum (ETH)
       </li>
       <li (click)="setView('gold')" [class.active]="currentView === 'gold'">
-        <i class="fas fa-gem"></i> Gold
+        <i class="fa-solid fa-coins"></i> Gold
       </li>
       <li (click)="setView('binance')" [class.active]="currentView === 'binance'">
-        <i class="fab fa-binance"></i> Binance (BNB)
+        <i class="fab fa-btc"></i> Binance (BNB)
       </li>
     </ul>
   </div>
