--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Columna Derecha: Vista Dinámica -->
-  <div class="content">
+  <div class="coins-content">
     <div *ngIf="currentView">
       <h2>{{ currentView | titlecase }}</h2>
       <p><strong>Total Equity:</strong> {{ totalEquity | currency }}</p>
