--- a/src/app/components/wallet/wallet.component.css
+++ b/src/app/components/wallet/wallet.component.css
@@ -37,7 +37,7 @@
     font-size: 24px;
   }
   
-  .content {
+  .coins-content {
     flex: 1;
     padding: 20px;
     margin: 0px 20px;
@@ -45,11 +45,11 @@
     border-radius: 8px;
   }
   
-  .content h2 {
+  .coins-content h2 {
     margin-top: 0;
   }
   
-  .content p {
+  .coins-content p {
     font-size: 18px;
   }
   
