--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -15,6 +15,10 @@
   
   <div class="content">
 
+    <div class="div">
+      <app-indices></app-indices>
+    </div>
+
     <router-outlet></router-outlet>
   </div>
 </div>
