--- a/src/app/components/wallet/wallet.component.css
+++ b/src/app/components/wallet/wallet.component.css
@@ -1,7 +1,8 @@
 .wallet-container {
     display: flex;
-    height: 50vh;
+    height: 400px;
     padding: 20px;
+
   }
   
   .sidebar {
@@ -14,7 +15,7 @@
   .menu {
     list-style-type: none;
     padding: 0;
-    background-color: aliceblue;
+    background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
   }
@@ -42,7 +43,7 @@
     flex: 1;
     padding: 20px;
     margin: 0px 20px;
-    background-color: aliceblue;
+    background-color: #ffffff;
     border-radius: 8px;
   }
   
