working on user

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="user-dashboard">
   
   <div class="sidebar">
+    {{username}}
     <ul class="menu">
       <li routerLink="/dashboard/inicio" routerLinkActive="active">
         <i class="fas fa-home"></i> Inicio
