--- a/src/app/components/wallet/wallet.component.css
+++ b/src/app/components/wallet/wallet.component.css
@@ -1,4 +1,4 @@
-.wallet-container {
+/*.wallet-container {
     display: flex;
     height: 400px;
     padding: 20px;
@@ -53,5 +53,72 @@
   
   .coins-content p {
     font-size: 18px;
+  }*/
+
+
+  .wallet-container {
+    display: flex;
+    height: 400px;
+    padding: 20px;
   }
+  
+  .sidebar {
+    width: 250px;
+    background-color: transparent;
+    padding: 0;
+  }
+  
+  .menu {
+    list-style-type: none;
+    padding: 0;
+    background-color: #ffffff;
+    padding: 20px;
+    border-radius: 8px;
+  }
+  
+  .menu li {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+    border-radius: 4px;
+    transition: background-color 0.3s;
+  }
+  
+  .menu li.active {
+    background-color: #007bff;
+    color: white;
+  }
+  
+  .menu li i {
+    margin-right: 10px;
+    font-size: 24px;
+  }
+  
+  .coins-content {
+    flex: 1;
+    padding: 20px;
+    margin: 0px 20px;
+    background-color: #ffffff;
+    border-radius: 8px;
+  }
+  
+  .coins-content h3 {
+    margin-top: 0;
+  }
+  
+  .coins-content table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  .coins-content table td {
+    padding: 10px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .coins-content .btn {
+    border-radius: 3px;
+  }
+  
   
