--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -21,26 +21,43 @@
   <div class="coins-content">
     <div *ngIf="currentView">
       <h3>{{ currentView | titlecase }}</h3>
-     <!-- <p><strong>Total Equity:</strong> {{ totalEquity | currency }}</p>
-      <p><strong>Available Margin:</strong> {{ availableMargin | currency }}</p>-->
       <table class="table table-borderless">
         <tbody>
           <tr>
-            <td><strong>Total Equity:</strong></td>
-            <td>{{ totalEquity | currency }}</td>
+            <td><strong>Hedge Fund Investment:</strong></td>
+            <td>{{ selectedCoin?.hedgeFundInvestment | currency }}</td>
           </tr>
           <tr>
-            <td><strong>Available Margin:</strong></td>
-            <td>{{ availableMargin | currency }}</td>
+            <td><strong>Bonificat:</strong></td>
+            <td>{{ selectedCoin?.bonificat | currency }}</td>
+          </tr>
+          <tr>
+            <td><strong>Hedge Protection Insurance:</strong></td>
+            <td>{{ selectedCoin?.hedgeProtectionInsurance | currency }}</td>
+          </tr>
+          <tr>
+            <td><strong>Opt Quantity:</strong></td>
+            <td>{{ selectedCoin?.optQuantity }}</td>
+          </tr>
+          <tr>
+            <td><strong>Strike Price:</strong></td>
+            <td>{{ selectedCoin?.strikePrice | currency }}</td>
+          </tr>
+          <tr>
+            <td><strong>Expiration Date:</strong></td>
+            <td>{{ selectedCoin?.expirationDate }}</td>
+          </tr>
+          <tr>
+            <td><strong>Earnings:</strong></td>
+            <td>{{ selectedCoin?.earnings | currency }}</td>
           </tr>
         </tbody>
       </table>
 
-      <div class="d-flex gap-2">
+      <!--<div class="d-flex gap-2">
         <button class="btn btn-success" style="border-radius: 3px;">Deposit</button>
         <button class="btn btn-danger" style="border-radius: 3px;">Withdraw</button>
-      </div>
-      
+      </div>-->
     </div>
   </div>
 </div>
