--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -25,31 +25,31 @@
         <tbody>
           <tr>
             <td><strong>Hedge Fund Investment:</strong></td>
-            <td>{{ selectedCoin?.hedgeFundInvestment | currency }}</td>
+            <td>{{ hedgeFundInvestment | currency }}</td>
           </tr>
           <tr>
             <td><strong>Bonificat:</strong></td>
-            <td>{{ selectedCoin?.bonificat | currency }}</td>
+            <td>{{ bonificat | currency }}</td>
           </tr>
           <tr>
             <td><strong>Hedge Protection Insurance:</strong></td>
-            <td>{{ selectedCoin?.hedgeProtectionInsurance | currency }}</td>
+            <td>{{ hedgeProtectionInsurance | currency }}</td>
           </tr>
           <tr>
             <td><strong>Opt Quantity:</strong></td>
-            <td>{{ selectedCoin?.optQuantity }}</td>
+            <td>{{ optQuantity }}</td>
           </tr>
           <tr>
             <td><strong>Strike Price:</strong></td>
-            <td>{{ selectedCoin?.strikePrice | currency }}</td>
+            <td>{{ strikePrice | currency }}</td>
           </tr>
           <tr>
             <td><strong>Expiration Date:</strong></td>
-            <td>{{ selectedCoin?.expirationDate }}</td>
+            <td>{{ expirationDate }}</td>
           </tr>
           <tr>
             <td><strong>Earnings:</strong></td>
-            <td>{{ selectedCoin?.earnings | currency }}</td>
+            <td>{{ earnings | currency }}</td>
           </tr>
         </tbody>
       </table>
