--- a/src/app/components/dashboard/dashboard.component.css
+++ b/src/app/components/dashboard/dashboard.component.css
@@ -7,7 +7,7 @@
   
   .sidebar {
     width: 10%;
-    background-color:#262626;
+    background-color:transparent;
     padding: 20px;
     height: 100vh;
     color: white;
@@ -106,7 +106,6 @@
   
   .stock-card {
     padding: 10px;
-    border: 1px solid #ddd;
     border-radius: 5px;
     text-align: center;
   }
