--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -3,8 +3,8 @@
   <div class="sidebar">
     {{username}}
     <ul class="menu">
-      <li routerLink="/dashboard/inicio" routerLinkActive="active">
-        <i class="fas fa-home"></i> Inicio
+      <li routerLink="/dashboard/home" routerLinkActive="active">
+        <i class="fas fa-home"></i> Home
       </li>
       <li routerLink="/dashboard/wallet" routerLinkActive="active">
         <i class="fa-solid fa-wallet"></i> Wallet
