--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -1,59 +1,120 @@
 <div class="wallet-container">
-  <!-- Columna Izquierda: Menú de Navegación -->
-  <div class="sidebar">
-    <ul class="menu">
-      <li (click)="setView('bitcoin')" [class.active]="currentView === 'bitcoin'">
-        <i class="fab fa-bitcoin"></i> Bitcoin (BTC)
-      </li>
-      <li (click)="setView('ethereum')" [class.active]="currentView === 'ethereum'">
-        <i class="fab fa-ethereum"></i> Ethereum (ETH)
-      </li>
-      <li (click)="setView('gold')" [class.active]="currentView === 'gold'">
-        <i class="fa-solid fa-coins"></i> Gold
-      </li>
-      <li (click)="setView('binance')" [class.active]="currentView === 'binance'">
-        <i class="fab fa-btc"></i> Binance (BNB)
-      </li>
-    </ul>
-  </div>
-
-  <!-- Columna Derecha: Vista Dinámica -->
-  <div class="coins-content">
-    <div *ngIf="currentView">
-      <h3>{{ currentView | titlecase }}</h3>
-      <table class="table table-borderless">
-        <tbody>
-          <tr>
-            <td><strong>Hedge Fund Investment:</strong></td>
-            <td>{{ hedgeFundInvestment | currency }}</td>
-          </tr>
-          <tr>
-            <td><strong>Bonificat:</strong></td>
-            <td>{{ bonificat | currency }}</td>
-          </tr>
-          <tr>
-            <td><strong>Hedge Protection Insurance:</strong></td>
-            <td>{{ hedgeProtectionInsurance | currency }}</td>
-          </tr>
-          <tr>
-            <td><strong>Opt Quantity:</strong></td>
-            <td>{{ optQuantity }}</td>
-          </tr>
-          <tr>
-            <td><strong>Strike Price:</strong></td>
-            <td>{{ strikePrice | currency }}</td>
-          </tr>
-          <tr>
-            <td><strong>Expiration Date:</strong></td>
-            <td>{{ expirationDate }}</td>
-          </tr>
-          <tr>
-            <td><strong>Earnings:</strong></td>
-            <td>{{ earnings | currency }}</td>
-          </tr>
-        </tbody>
-      </table>
-
+  <div class="row">
+    <div class="user-info">
+      <p><strong>MARIA CARMEN BUENO ROBLES</strong></p>
+      <p>ID: PAF157433</p>
+      <p>ISLAS BALEARES, ESPAÑA.</p>
+      <p>Junior Account: 5645323498ES</p>
+      <p>Introduced by: Rempired Lited</p>
+      <p>Fecha de ingreso: 15-01-2018</p>
+      <p>Fecha de corte: 15-04-2018</p>
+      <p>Próximo corte: 15-05-2018</p>
     </div>
   </div>
+
+  <div class="row">
+    <div class="sidebar">
+      <ul class="menu">
+        <li (click)="setView('bitcoin')" [class.active]="currentView === 'bitcoin'">
+          <i class="fab fa-bitcoin"></i> Bitcoin (BTC)
+        </li>
+        <li (click)="setView('ethereum')" [class.active]="currentView === 'ethereum'">
+          <i class="fab fa-ethereum"></i> Ethereum (ETH)
+        </li>
+        <li (click)="setView('gold')" [class.active]="currentView === 'gold'">
+          <i class="fa-solid fa-coins"></i> Gold
+        </li>
+        <li (click)="setView('binance')" [class.active]="currentView === 'binance'">
+          <i class="fab fa-btc"></i> Binance (BNB)
+        </li>
+      </ul>
+    </div>
+  
+    <!-- Columna Derecha: Vista Dinámica -->
+    <div class="coins-content">
+      <div *ngIf="currentView">
+        <h3 class="coin-title
+        ">{{ currentView | titlecase }}</h3>
+        <table class="table table-borderless">
+          <tbody>
+            <tr>
+              <td><strong>Hedge Fund Investment:</strong></td>
+              <td>{{ hedgeFundInvestment | currency }}</td>
+            </tr>
+            <tr>
+              <td><strong>Bonificat:</strong></td>
+              <td>{{ bonificat | currency }}</td>
+            </tr>
+            <tr>
+              <td><strong>Hedge Protection Insurance:</strong></td>
+              <td>{{ hedgeProtectionInsurance | currency }}</td>
+            </tr>
+            <tr>
+              <td><strong>Opt Quantity:</strong></td>
+              <td>{{ optQuantity }}</td>
+            </tr>
+            <tr>
+              <td><strong>Strike Price:</strong></td>
+              <td>{{ strikePrice | currency }}</td>
+            </tr>
+            <tr>
+              <td><strong>Expiration Date:</strong></td>
+              <td>{{ expirationDate }}</td>
+            </tr>
+            <tr>
+              <td><strong>Earnings:</strong></td>
+              <td>{{ earnings | currency }}</td>
+            </tr>
+          </tbody>
+        </table>
+  
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="container">
+      <div class="table-responsive">
+        <table class="table table-bordered">
+          <thead class="thead-light">
+            <tr>
+              <th>Enero</th>
+              <th>Febrero</th>
+              <th>Marzo</th>
+              <th>Abril</th>
+              <th>Mayo</th>
+              <th>Junio</th>
+              <th>Julio</th>
+              <th>Agosto</th>
+              <th>Setiembre</th>
+              <th>Octubre</th>
+              <th>Noviembre</th>
+              <th>Diciembre</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    
+    
+    
+  
+  </div>
+  
 </div>
