--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -26,7 +26,7 @@
       <table class="table table-borderless">
         <tbody>
           <tr>
-            <td><strong>Total Equity:</strong></td>
+            <td><strong>HEDGE FUND INVESTMENT:</strong></td>
             <td>{{ totalEquity | currency }}</td>
           </tr>
           <tr>
