--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper d-flex align-items-center justify-content-center h-100">
     <div class="card login-form">
       <div class="card-body">
-        <h5 class="card-title text-center">Login Form</h5>
+        <h2 class="card-title text-center mb-4">Login Form</h2>
         <form (ngSubmit)="onLogin()" class="needs-validation" novalidate>
           <div class="mb-3">
         
@@ -28,7 +28,7 @@
               placeholder="password"
             />
           </div>
-          <button type="submit" class="btn btn-primary w-100">Submit</button>
+          <button type="submit" class="btn btn-dark w-100">Submit</button>
           <div class="sign-up mt-4">
             Don't have an account? <a routerLink="/register">Create One</a>
           </div>
