--- a/src/app/components/wallet/wallet.component.css
+++ b/src/app/components/wallet/wallet.component.css
@@ -103,3 +103,27 @@
   padding: 10px;
   border-bottom: 1px solid #ddd;
 }
+
+.table th, .table td {
+  text-align: left;
+  vertical-align: middle;
+}
+
+.table td {
+  font-size: 16px;
+}
+
+.table th {
+  background-color: #f8f9fa;
+  font-weight: bold;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+  background-color: #f2f2f2;
+}
+
+.table-bordered {
+  border: 1px solid #dee2e6;
+}
+
+
