--- a/src/app/components/indices/indices.component.css
+++ b/src/app/components/indices/indices.component.css
@@ -16,7 +16,7 @@
   }
 
 
-  .index-item {
+  .swiper-slide {
     display: flex;
     align-items: center;
     padding: 10px;
@@ -27,24 +27,24 @@
     flex: 0 0 auto;
   }
   
-  .index-item h4 {
+  .swiper-slide h4 {
     margin: 0;
     font-size: 16px;
     font-weight: bold;
     margin-right: 10px;
   }
   
-  .index-item .value {
+  .swiper-slide .value {
     font-size: 16px;
     margin-right: 10px;
   }
   
-  .index-item .change {
+  .swiper-slide .change {
     font-size: 14px;
     color: green; /* Cambia a rojo si el cambio es negativo */
   }
   
-  .index-item .change-icon {
+  .swiper-slide .change-icon {
     margin-left: 5px;
   }
   
