--- a/src/app/components/indices/indices.component.html
+++ b/src/app/components/indices/indices.component.html
@@ -1,19 +1,14 @@
-<!-- indices.component.html -->
-
-
-
-
 
 <div class="swiper">
   <div class="indices-slider swiper-wrapper">
-    <div *ngFor="let index of indices" class="index-item swiper-slide">
+    <div *ngFor="let index of indices" class="swiper swiper-slide">
       <h4>{{ index.name }}</h4>
       <div class="indices-container">
-    <p class="value">{{ index.value }}</p>
-    <p class="change">
-    <i class="fa" [ngClass]="index.change > 0 ? 'fa-arrow-up' : 'fa-arrow-down'"></i>
-    {{ index.change }}
-    </p>
+        <p class="value">{{ index.value }}</p>
+        <p class="change">
+        <i class="fa" [ngClass]="index.change > 0 ? 'fa-arrow-up' : 'fa-arrow-down'"></i>
+        {{ index.change }}
+        </p>
       </div>
       
     </div>
