--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,191 +1,76 @@
-<div class="container mt-5">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <div class="card">
-        <div class="card-body">
-          <h2 class="card-title text-center mb-4">Register</h2>
-          <form #registerForm="ngForm" (ngSubmit)="onRegister(registerForm)" class="needs-validation" novalidate>
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label for="username" class="form-label">Username:</label>
-                <input
-                  type="text"
-                  id="username"
-                  [(ngModel)]="username"
-                  name="username"
-                  class="form-control"
-                  placeholder="Username"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['username'].invalid && (registerForm.form.controls['username'].touched || registerForm.form.controls['username'].dirty)" class="invalid-feedback">
-                  Username is required.
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="lastname" class="form-label">Last Name:</label>
-                <input
-                  type="text"
-                  id="lastname"
-                  [(ngModel)]="lastname"
-                  name="lastname"
-                  class="form-control"
-                  placeholder="Last Name"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['lastname'].invalid && (registerForm.form.controls['lastname'].touched || registerForm.form.controls['lastname'].dirty)" class="invalid-feedback">
-                  Last Name is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label for="name" class="form-label">First Name:</label>
-                <input
-                  type="text"
-                  id="name"
-                  [(ngModel)]="name"
-                  name="name"
-                  class="form-control"
-                  placeholder="First Name"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['name'].invalid && (registerForm.form.controls['name'].touched || registerForm.form.controls['name'].dirty)" class="invalid-feedback">
-                  First Name is required.
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="email" class="form-label">Email:</label>
-                <input
-                  type="email"
-                  id="email"
-                  [(ngModel)]="email"
-                  name="email"
-                  class="form-control"
-                  placeholder="Email"
-                  required
-                />
-                <div *ngIf="emailError" class="invalid-feedback">
-                  {{ emailError }}
-                </div>
-                <div *ngIf="registerForm.form.controls['email'].invalid && (registerForm.form.controls['email'].touched || registerForm.form.controls['email'].dirty)" class="invalid-feedback">
-                  Valid email is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label for="password" class="form-label">Password:</label>
-                <input
-                  type="password"
-                  id="password"
-                  [(ngModel)]="password"
-                  name="password"
-                  class="form-control"
-                  placeholder="Password"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['password'].invalid && (registerForm.form.controls['password'].touched || registerForm.form.controls['password'].dirty)" class="invalid-feedback">
-                  Password is required.
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="country" class="form-label">Country:</label>
-                <input
-                  type="text"
-                  id="country"
-                  [(ngModel)]="country"
-                  name="country"
-                  class="form-control"
-                  placeholder="Country"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['country'].invalid && (registerForm.form.controls['country'].touched || registerForm.form.controls['country'].dirty)" class="invalid-feedback">
-                  Country is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label for="province" class="form-label">Province/State:</label>
-                <input
-                  type="text"
-                  id="province"
-                  [(ngModel)]="province"
-                  name="province"
-                  class="form-control"
-                  placeholder="Province/State"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['province'].invalid && (registerForm.form.controls['province'].touched || registerForm.form.controls['province'].dirty)" class="invalid-feedback">
-                  Province/State is required.
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="phone" class="form-label">Phone Number:</label>
-                <input
-                  type="text"
-                  id="phone"
-                  [(ngModel)]="phone"
-                  name="phone"
-                  class="form-control"
-                  placeholder="Phone Number"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['phone'].invalid && (registerForm.form.controls['phone'].touched || registerForm.form.controls['phone'].dirty)" class="invalid-feedback">
-                  Phone Number is required.
-                </div>
-              </div>
-            </div>
-
-            <div class="row mb-3">
-              <div class="col-md-6">
-                <label for="accountTypeId" class="form-label">Account Type ID:</label>
-                <input
-                  type="text"
-                  id="accountTypeId"
-                  [(ngModel)]="accountTypeId"
-                  name="accountTypeId"
-                  class="form-control"
-                  placeholder="Account Type ID"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['accountTypeId'].invalid && (registerForm.form.controls['accountTypeId'].touched || registerForm.form.controls['accountTypeId'].dirty)" class="invalid-feedback">
-                  Account Type ID is required.
-                </div>
-              </div>
-
-              <div class="col-md-6">
-                <label for="accountNumber" class="form-label">Account Number:</label>
-                <input
-                  type="text"
-                  id="accountNumber"
-                  [(ngModel)]="accountNumber"
-                  name="accountNumber"
-                  class="form-control"
-                  placeholder="Account Number"
-                  required
-                />
-                <div *ngIf="registerForm.form.controls['accountNumber'].invalid && (registerForm.form.controls['accountNumber'].touched || registerForm.form.controls['accountNumber'].dirty)" class="invalid-feedback">
-                  Account Number is required.
-                </div>
-              </div>
-            </div>
-
-            <button type="submit" class="btn btn-dark w-100" [disabled]="registerForm.invalid">Register</button>
-
-            <div class="mt-4 text-center">
-              Already have an account? <a routerLink="/login">Login</a>
-            </div>
-          </form>
-        </div>
+<form (ngSubmit)="onSubmit()" class="container mt-4">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="name">Nombre</label>
+        <input type="text" class="form-control" id="name" placeholder="Nombre" [(ngModel)]="user.name" name="name" required>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="lastname">Apellido</label>
+        <input type="text" class="form-control" id="lastname" placeholder="Apellido" [(ngModel)]="user.lastname" name="lastname" required>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="username">Nombre de Usuario</label>
+        <input type="text" class="form-control" id="username" placeholder="Nombre de Usuario" [(ngModel)]="user.username" name="username" required>
       </div>
     </div>
   </div>
-</div>
+
+  <!-- Otros campos del formulario -->
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="email">Correo Electrónico</label>
+        <input type="email" class="form-control" id="email" placeholder="Correo Electrónico" [(ngModel)]="user.email" name="email" required>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="password">Contraseña</label>
+        <input type="password" class="form-control" id="password" placeholder="Contraseña" [(ngModel)]="user.password" name="password" required>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="country">País</label>
+        <input type="text" class="form-control" id="country" placeholder="País" [(ngModel)]="user.country" name="country" required>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="province">Provincia</label>
+        <input type="text" class="form-control" id="province" placeholder="Provincia" [(ngModel)]="user.province" name="province" required>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="phone">Teléfono</label>
+        <input type="text" class="form-control" id="phone" placeholder="Teléfono" [(ngModel)]="user.phone" name="phone" required>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="accountNumber">Número de Cuenta</label>
+        <input type="text" class="form-control" id="accountNumber" placeholder="Número de Cuenta" [(ngModel)]="user.accountNumber" name="accountNumber" required>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <label for="accountTypeId">ID Tipo de Cuenta</label>
+        <input type="text" class="form-control" id="accountTypeId" placeholder="ID Tipo de Cuenta" [(ngModel)]="user.accountTypeId" name="accountTypeId" readonly>
+      </div>
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary mt-3">Registrar</button>
+</form>
