--- a/src/app/components/wallet/wallet.component.html
+++ b/src/app/components/wallet/wallet.component.html
@@ -40,7 +40,7 @@
     </div>
   </div>
 
-  <div class="row">
+  <div class="row bg-light">
     <div class="sidebar">
       <ul class="menu">
         <li (click)="setView('bitcoin')" [class.active]="currentView === 'bitcoin'">
