--- a/src/app/components/admin/admin.component.css
+++ b/src/app/components/admin/admin.component.css
@@ -7,7 +7,7 @@
 
 .sidebar {
   width: 10%;
-  background-color:#262626;
+  background-color:transparent;
   padding: 20px;
   height: 100vh;
   color: white;
