--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
               [(ngModel)]="username"
               name="username"
               class="form-control"
-              placeholder="username or email"
+              placeholder="Username or Email"
               required
             />
           </div>
@@ -22,13 +22,13 @@
               type="password"
               id="password"
               [(ngModel)]="password"
-              name="password"
+              name="Password"
               class="form-control"
               required
               placeholder="password"
             />
           </div>
-          <button type="submit" class="btn btn-dark w-100">Submit</button>
+          <button type="submit" class="btn btn-dark w-100">Log In</button>
           <div class="sign-up mt-4">
             Don't have an account? <a routerLink="/register">Create One</a>
           </div>
