--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,7 +1,7 @@
-<div class="users-container">
-    <h2>Users List</h2>
+<div class="users-container p-4">
+    <h2 class="text-light">Users List</h2>
     <table class="table table-bordered">
-      <thead>
+      <thead> 
         <tr>
           <th>Name</th>
           <th>Email</th>
@@ -23,7 +23,7 @@
           <td>{{ user.accountType }}</td>
           <td>{{ user.accountNumber }}</td>
           <td>
-            <button (click)="viewWallet(user.walletId)" class="btn btn-primary">View Wallet</button>
+            <button (click)="viewWallet(user.walletId)" class="btn btn-success">View Wallet</button>
           </td>
         </tr>
       </tbody>
